Update to use JEP 477